# OpenShell

./: .gitignore  .gitlab-ci.yml  AGENTS.md  CONTRIBUTING.md  TESTING.md  dev-sandbox-policy.yaml  mise.toml
.agent/skills/debug-navigator-cluster/: SKILL.md
.github/workflows/: e2e-test.yml
architecture/: cluster-bootstrap.md
architecture/plans/: remote-bootstrap-fixes.md  reuse-server-image-for-gateway-pki-job.md  sandbox-create-auto-bootstrap.md
crates/navigator-bootstrap/: Cargo.toml
crates/navigator-bootstrap/src/: constants.rs  docker.rs  image.rs  kubeconfig.rs  lib.rs  metadata.rs  mtls.rs  paths.rs  runtime.rs
crates/navigator-cli/: Cargo.toml
crates/navigator-cli/src/: bootstrap.rs  lib.rs  main.rs  run.rs  ssh.rs  tls.rs
crates/navigator-sandbox/src/: process.rs  ssh.rs
crates/navigator-server/src/: grpc.rs  ssh_tunnel.rs
crates/navigator-server/src/sandbox/: mod.rs
deploy/docker/: Dockerfile.ci  Dockerfile.cluster  Dockerfile.pki-job  Dockerfile.sandbox  Dockerfile.server  cluster-entrypoint.sh  cross-build.sh
deploy/helm/navigator/: values.yaml
deploy/helm/navigator/templates/: deployment.yaml  gateway-backend-traffic-policy.yaml  gateway-pki-job.yaml
deploy/kube/manifests/: navigator-helmchart.yaml
e2e/rust/: Cargo.toml
e2e/rust/src/: lib.rs
e2e/rust/src/harness/: binary.rs  sandbox.rs
e2e/rust/tests/: custom_image.rs  port_forward.rs  sync.rs
tasks/: test.toml
